[package]
name = "fuel-crypto"
version = "0.5.0"
authors = ["Fuel Labs <contact@fuel.sh>"]
categories = ["cryptography::cryptocurrencies", "data-structures"]
edition = "2021"
homepage = "https://fuel.network/"
keywords = ["blockchain", "cryptocurrencies"]
license = "Apache-2.0"
repository = "https://github.com/FuelLabs/fuel-crypto"
description = "Fuel cryptographic primitives."

[dependencies]
borrown = "0.1"
fuel-types = { version = "0.5", default-features = false }
lazy_static = { version = "1.4", optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
sha2 = { version = "0.9", default-features = false }

# WASM support requires a different set of default features
# (e.g. `secp256k1/rand` instead of `secp256k1/rand-std`, and `rand/std_rng` to be disabled)
[target.'cfg(target_arch = "wasm32")'.dependencies]
rand = { version = "0.8", default-features = false, optional = true }
secp256k1 = { version = "0.20", default-features = false, features = [ "rand", "recovery" ], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = { version = "0.8", default-features = false, features = ["std_rng"], optional = true }
# `rand-std` is used to further protect the blinders from side-channel attacks and won't compromise
# the deterministic arguments of the signature (key, nonce, message), as defined in the RFC-6979
secp256k1 = { version = "0.20", features = [ "rand-std", "recovery" ], optional = true }

[dev-dependencies]
bincode = { version = "1.3", default-features = false }
criterion = "0.3"
fuel-crypto = { path = ".", default-features = false, features = ["random"] }
k256 = { version = "0.10", features = ["ecdsa"] }
rand = { version = "0.8", default-features = false, features = ["std_rng"] }
sha2 = "0.9"

[features]
default = ["fuel-types/default", "std"]
random = ["fuel-types/random", "rand"]
serde = ["dep:serde", "fuel-types/serde"]
alloc = ["rand/alloc", "secp256k1/alloc"]
std = ["alloc", "fuel-types/std", "lazy_static", "secp256k1", "serde?/default"]

[[test]]
name = "test-serde"
path = "tests/serde.rs"
required-features = ["serde", "std"]

[[test]]
name = "test-signature"
path = "tests/signature.rs"
required-features = ["std"]

[[test]]
name = "test-signer"
path = "tests/signer.rs"
required-features = ["std"]

[[bench]]
name = "signature"
harness = false
required-features = ["std"]

# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
